refactor:  added testcase